Add an example abstract

--- a/src/LatexTemplate.tex
+++ b/src/LatexTemplate.tex
@@ -12,6 +12,9 @@
 % use the title_page latex file as title page
 \maketitle
 
+\newpage
+\input{abstract/abstract.tex}
+
 % Print the table of contents, print page over the page numbers
 \tableofcontents
 \addtocontents{toc}{~\hfill\textbf{Page}\par}
