Refactor the introduction
This way it is clear which part is using the glossary and which the
references.

--- a/src/sections/introduction.tex
+++ b/src/sections/introduction.tex
@@ -1,5 +1,8 @@
 \section{Introduction}
 \label{sec:introduction}
 
-Somethimes, life is about the important questions, for example: "When does a bird become a birb?" \cite{asherelbeinWhenIsaBirdaBirb}
-\gls{yaml}
+Sometimes, life is about the important questions, for example: "When does a bird become a birb?"
+Find the answer in an extremely important guide \cite{asherelbeinWhenIsaBirdaBirb}.
+
+\subsection{Using a Glossary}
+One might want to use a format like \gls{yaml} to describe complex data-structures in human-readable format.
