Add more information and examples

--- a/src/LatexTemplate.tex
+++ b/src/LatexTemplate.tex
@@ -20,9 +20,12 @@
 \addtocontents{toc}{~\hfill\textbf{Page}\par}
 \newpage
 
-\input{sections/introduction.tex}
-% Start using arabic number when the actual contents starts
 \pagenumbering{arabic}
+
+\input{sections/introduction.tex}
+\input{sections/lorem_ipsum.tex}
+\input{sections/corporate_ipsum.tex}
+% Start using arabic number when the actual contents starts
 
 \input{apendix/apendix.tex}
 
