--- a/src/glossary/glossary.tex
+++ b/src/glossary/glossary.tex
@@ -1,7 +1,8 @@
-%! yaml ------------------------------------------------------------------------
+%! yaml ---------------------------------------
 \newglossaryentry{yamlg}{name={YAML},
     description={YAML Ain't Markup Language
-    - human readable data-serialization language.}}
+            - human readable data-serialization language.}}
 \newglossaryentry{yaml}{type=\acronymtype, name={YAML}, description={YAML
-Ain't Markup Language}, first={YAML \glsadd{yamlg}}, see=[Glossary:]{yamlg}}
-%! yaml ------------------------------------------------------------------------
+            Ain't Markup Language}, first={YAML ain't markup language \glsadd{yamlg}},
+    see=[Glossary:]{yamlg}}
+%! yaml ---------------------------------------
