--- a/src/references/references.bib
+++ b/src/references/references.bib
@@ -1,7 +1,21 @@
 @online{asherelbeinWhenIsaBirdaBirb,
-    title = {When Is a Bird a Birb? An Extremely Important Guide },
-    url = {https://www.audubon.org/news/when-bird-birb-extremely-important-guide},
-    type = {Guide},
-    urldate = {2020-01-23},
-    author = {{Asher Elbein}}
+  title   = {When Is a Bird a Birb? An Extremely Important Guide },
+  url     = {https://www.audubon.org/news/when-bird-birb-extremely-important-guide},
+  type    = {Guide},
+  urldate = {2020-01-23},
+  author  = {{Asher Elbein}}
+}
+
+@online{loremIpsum,
+  title   = {Lorem Ipsum Generator},
+  url     = {https://loremipsum.io/},
+  urldate = {2021-03-15},
+  author  = {{wasai - Brand Studio}}
+}
+
+@online{corporateIpsum,
+  title   = {Corporate Ipsum Generator},
+  url     = {https://www.cipsum.com/},
+  urldate = {2021-03-15},
+  author  = {{wasai - Brand Studio}}
 }
