Add german settings

--- a/src/LatexTemplate.tex
+++ b/src/LatexTemplate.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, 12pt]{article} %report
+\documentclass[a4paper, 12pt, ngerman]{article} %report
 \usepackage{util/config}
 \input{glossary/glossary.tex}
 
