--- a/src/sections/corporate_ipsum.tex
+++ b/src/sections/corporate_ipsum.tex
@@ -1,7 +1,7 @@
 \section{Corporate Ipsum}
 \label{sec:corporate_ipsum}
 
-This is a reference to \cref{sec:lorem_ipsum} using cref.
+Das ist eine Referenz zu \cref{sec:lorem_ipsum}, hierfür wird cref genutzt.
 
 Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
 
