--- a/src/util/config.sty
+++ b/src/util/config.sty
@@ -22,7 +22,7 @@
 \usepackage[T1]{fontenc}
 
 % Australian uses the **correct** date format
-\usepackage[australian,american]{babel}
+\usepackage[ngerman]{babel}
 \usepackage{csquotes}
 
 % Use hyperref and set it up
@@ -95,3 +95,6 @@
 \usepackage[capitalise,noabbrev]{cleveref}
 
 \newcommand{\quotes}[1]{``#1''}
+% German specific cref settings
+\crefname{listing}{Code-Beispiel}{Code-Beispiele}
+\Crefname{listing}{Code-Beispiel}{Code-Beispiele}
