--- a/src/abstract/abstract.tex
+++ b/src/abstract/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-    A short summary of the following document.
+    Eine kurze Zusammenfassung des folgenden Dokuments.
 \end{abstract}
